--- a/inde.html
+++ b/inde.html
@@ -28,35 +28,39 @@
     </header>
     <main class="container">
         <h2 class="general-title"></h2>
-        <section class="genero"></section>
-        <section class="genero"></section>
-        <section class="genero"></section>
-        <section class="genero"></section>
-        <section class="genero"></section>
-        <section class="genero"></section>
+        <article class="genero"></article>
+        <article class="genero"></article>
+        <article class="genero"></article>
+        <article class="genero"></article>
+        <article class="genero"></article>
+        <article class="genero"></article>
     </main>
     <footer class="footer">
-        <div class="footer-logo">
-            <a href="#"><i></i></a>
-            <h1 class="footer-logo-title"></h1>
-        </div> 
-        <nav>
-            <ul class="footer-menu">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </nav>
-        <div class="contacts">
-            <p></p>
-            <ul class="nets">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </div>
+        <article class="footer-inside">
+            <section class="footer-logo">
+                <a href="#"><i></i></a>
+                <h1 class="footer-logo-title"></h1>
+            </section> 
+            <section class="navegation">
+                <nav>
+                    <ul class="footer-menu">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="contacts">
+                <p></p>
+                <ul class="nets">
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </section>
+        </article>
     </footer>
 </body>
 </html>
