--- a/inde.html
+++ b/inde.html
@@ -27,13 +27,15 @@
         </nav>
     </header>
     <main class="container">
-        <h2 class="general-title"></h2>
-        <article class="genero"></article>
-        <article class="genero"></article>
-        <article class="genero"></article>
-        <article class="genero"></article>
-        <article class="genero"></article>
-        <article class="genero"></article>
+        <article class="books">
+            <h2 class="general-title"></h2>
+            <section class="genero"></section>
+            <section class="genero"></section>
+            <section class="genero"></section>
+            <section class="genero"></section>
+            <section class="genero"></section>
+            <section class="genero"></section>
+        </article>
     </main>
     <footer class="footer">
         <article class="footer-inside">
