--- a/inde.html
+++ b/inde.html
@@ -28,13 +28,28 @@
     </header>
     <main class="container">
         <article class="books">
-            <h2 class="general-title"></h2>
-            <section class="genero"></section>
-            <section class="genero"></section>
-            <section class="genero"></section>
-            <section class="genero"></section>
-            <section class="genero"></section>
-            <section class="genero"></section>
+            <h2 class="general-title">Livros</h2>
+            <section class="genero">
+                <h3 class="genre-title">ficcao-cientifica</h3>
+            </section>
+            <section class="genero">
+                <h3 class="genre-title">ficcao-fantasia</h3>
+            </section>
+            <section class="genero">
+                <h3 class="genre-title">ficcao-fantasia_ficcao-aventura</h3>
+            </section>
+            <section class="genero">
+                <h3 class="genre-title">nao-fiction</h3>
+            </section>
+            <section class="genero">
+                <h3 class="genre-title">misterio</h3>
+            </section>
+            <section class="genero">
+                <h3 class="genre-title">drama</h3>
+            </section>
+            <section class="genero">
+                <h3 class="genre-title">humor</h3>
+            </section>
         </article>
     </main>
     <footer class="footer">
