--- a/inde.html
+++ b/inde.html
@@ -53,7 +53,7 @@
         </article>
     </main>
     <footer class="footer">
-        <article class="footer-inside">
+        <article class="inside-the-footer">
             <section class="footer-logo">
                 <a href="#"><i></i></a>
                 <h1 class="footer-logo-title"></h1>
