--- a/inde.html
+++ b/inde.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="#"><i></i></a>
+            <a href="#"><img src="src/image/bookshelf.png" alt="Imagem da logo"></a>
             <h1 class="logo-title"></h1>
         </div>
         <nav>
@@ -27,38 +27,38 @@
         </nav>
     </header>
     <main class="container">
-        <article class="books">
+        <section class="books">
             <h2 class="general-title">Livros</h2>
-            <section class="genero">
+            <article class="genero">
                 <h3 class="genre-title">ficcao-cientifica</h3>
-            </section>
-            <section class="genero">
+            </article>
+            <article class="genero">
                 <h3 class="genre-title">ficcao-fantasia</h3>
-            </section>
-            <section class="genero">
+            </article>
+            <article class="genero">
                 <h3 class="genre-title">ficcao-fantasia_ficcao-aventura</h3>
-            </section>
-            <section class="genero">
+            </article>
+            <article class="genero">
                 <h3 class="genre-title">nao-fiction</h3>
-            </section>
-            <section class="genero">
+            </article>
+            <article class="genero">
                 <h3 class="genre-title">misterio</h3>
-            </section>
-            <section class="genero">
+            </article>
+            <article class="genero">
                 <h3 class="genre-title">drama</h3>
-            </section>
-            <section class="genero">
+            </article>
+            <article class="genero">
                 <h3 class="genre-title">humor</h3>
-            </section>
-        </article>
+            </article>
+        </section>
     </main>
     <footer class="footer">
-        <article class="inside-the-footer">
-            <section class="footer-logo">
+        <section class="inside-the-footer">
+            <article class="footer-logo">
                 <a href="#"><i></i></a>
                 <h1 class="footer-logo-title"></h1>
-            </section> 
-            <section class="navegation">
+            </article> 
+            <article class="navegation">
                 <nav>
                     <ul class="footer-menu">
                         <li><a href="#"></a></li>
@@ -67,8 +67,8 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </nav>
-            </section>
-            <section class="contacts">
+            </article>
+            <article class="contacts">
                 <p></p>
                 <ul class="nets">
                     <li><a href="#"></a></li>
@@ -76,8 +76,8 @@
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                 </ul>
-            </section>
-        </article>
+            </article>
+        </section>
     </footer>
 </body>
 </html>
