--- a/inde.html
+++ b/inde.html
@@ -14,15 +14,13 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="#"><img src="src/image/bookshelf.png" alt="Imagem da logo"></a>
+            <a href="#"><img src="src/image/livros (1).png" alt="Imagem da logo"></a>
             <h1 class="logo-title"></h1>
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">Livos</a></li>
+                <li><a href="#">Gibis</a></li>
             </ul>
         </nav>
     </header>
