--- a/inde.html
+++ b/inde.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="#">Livos</a></li>
+                <li><a href="#">Livros</a></li>
                 <li><a href="#">Gibis</a></li>
             </ul>
         </nav>
