--- a/inde.html
+++ b/inde.html
@@ -29,6 +29,14 @@
             <h2 class="general-title">Livros</h2>
             <article class="genero">
                 <h3 class="genre-title">ficcao-cientifica</h3>
+                <section class="star-wars">
+                    <h4 class="book-name">Star Wars</h4>
+                    <div class="books-images">
+                        <div class="book">
+                            <!-- <img src="src/image/books/star-wars-a-trilogia-darkside.jpg" alt="Imagem do livro do Star Wars"> -->
+                        </div>
+                    </div>
+                </section>
             </article>
             <article class="genero">
                 <h3 class="genre-title">ficcao-fantasia</h3>
