--- a/inde.html
+++ b/inde.html
@@ -27,7 +27,7 @@
     <main class="container">
         <section class="books">
             <h2 class="general-title">Livros</h2>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">ficcao-cientifica</h3>
                 <section class="star-wars">
                     <h4 class="book-name">Star Wars</h4>
@@ -38,22 +38,22 @@
                     </div>
                 </section>
             </article>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">ficcao-fantasia</h3>
             </article>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">ficcao-fantasia_ficcao-aventura</h3>
             </article>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">nao-fiction</h3>
             </article>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">misterio</h3>
             </article>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">drama</h3>
             </article>
-            <article class="genero">
+            <article class="genre">
                 <h3 class="genre-title">humor</h3>
             </article>
         </section>
