--- a/inde.html
+++ b/inde.html
@@ -33,7 +33,7 @@
                     <h4 class="book-name">Star Wars</h4>
                     <div class="books-images">
                         <div class="book">
-                            <!-- <img src="src/image/books/star-wars-a-trilogia-darkside.jpg" alt="Imagem do livro do Star Wars"> -->
+                            <img src="src/image/books/star-wars-a-trilogia-darkside.jpg" alt="Imagem do livro do Star Wars">
                         </div>
                     </div>
                 </section>
