--- a/inde.html
+++ b/inde.html
@@ -28,7 +28,7 @@
         <section class="books">
             <h2 class="general-title">Livros</h2>
             <article class="genre">
-                <h3 class="genre-title">ficcao-cientifica</h3>
+                <h3 class="genre-title">ficção Científica</h3>
                 <section class="star-wars">
                     <h4 class="book-name">Star Wars</h4>
                     <div class="books-images">
