--- a/inde.html
+++ b/inde.html
@@ -39,22 +39,22 @@
                 </section>
             </article>
             <article class="genre">
-                <h3 class="genre-title">ficcao-fantasia</h3>
+                <h3 class="genre-title">ficção Fantasia</h3>
             </article>
             <article class="genre">
-                <h3 class="genre-title">ficcao-fantasia_ficcao-aventura</h3>
+                <h3 class="genre-title">ficção Fantasia Ficção Aventura</h3>
             </article>
             <article class="genre">
-                <h3 class="genre-title">nao-fiction</h3>
+                <h3 class="genre-title">Não Ficção</h3>
             </article>
             <article class="genre">
-                <h3 class="genre-title">misterio</h3>
+                <h3 class="genre-title">Misterio</h3>
             </article>
             <article class="genre">
-                <h3 class="genre-title">drama</h3>
+                <h3 class="genre-title">Drama</h3>
             </article>
             <article class="genre">
-                <h3 class="genre-title">humor</h3>
+                <h3 class="genre-title">Humor</h3>
             </article>
         </section>
     </main>
