--- a/inde.html
+++ b/inde.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="#"><img src="src/image/livros (1).png" alt="Imagem da logo"></a>
+            <a href="#"><img src="src/image/books-mobile.png" alt="Imagem da logo"></a>
             <h1 class="logo-title"></h1>
         </div>
         <nav>
