--- a/inde.html
+++ b/inde.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="logo">
             <a href="#"><img src="src/image/books-mobile.png" alt="Imagem da logo"></a>
-            <h1 class="logo-title"></h1>
+            <h1 class="logo-title">Biblioteca</h1>
         </div>
         <nav>
             <ul class="menu">
