--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="src/html"><img src="src/image/books-mobile.png" alt="Imagem da logo"></a>
-            <h1 class="logo-title">Biblioteca</h1>
+            <a href="./index.html">
+                <img src="src/image/books-mobile.png" alt="Imagem da logo">
+                <h1 class="logo-title">Biblioteca</h1>
+            </a>
         </div>
         <nav>
             <ul class="menu">
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="src/html/livros.html">Livros</a></li>
                 <li><a href="#">Gibis</a></li>
             </ul>
