--- a/src/html/livros.html
+++ b/src/html/livros.html
@@ -14,11 +14,12 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="src/html"><img src="../image/books-mobile.png" alt="Imagem da logo"></a>
+            <a href="/index.html"><img src="../image/books-mobile.png" alt="Imagem da logo"></a>
             <h1 class="logo-title">Biblioteca</h1>
         </div>
         <nav>
             <ul class="menu">
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="../html/livros.html">Livros</a></li>
                 <li><a href="#">Gibis</a></li>
             </ul>
