--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="./index.html">
-                <img src="src/image/books-mobile.png" alt="Imagem da logo">
-                <h1 class="logo-title">Biblioteca</h1>
-            </a>
+            <a href="./index.html"><img src="src/image/books-mobile.png" alt="Imagem da logo"></a>
+            <h1 class="logo-title">Biblioteca</h1>
         </div>
         <nav>
             <ul class="menu">
@@ -28,7 +26,10 @@
         </nav>
     </header>
     <main class="container">
-        
+        <section class="panel">
+            <h2 class="general-title">Boas-Vindas</h2>
+            <p></p>
+        </section>
     </main>
     <footer class="footer">
         <section class="inside-the-footer">
