--- a/src/html/livros.html
+++ b/src/html/livros.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="../html/livros.html">Livros</a></li>
                 <li><a href="#">Gibis</a></li>
             </ul>
