--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="./index.html"><img src="src/image/books-mobile.png" alt="Imagem da logo"></a>
+            <a href="./index.html"><img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
             <h1 class="logo-title">Biblioteca</h1>
         </div>
         <nav>
