--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="menu">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="src/html/livros.html">Livros</a></li>
-                <li><a href="#">Gibis</a></li>
+                <li><a href="#">Infância</a></li>
             </ul>
         </nav>
     </header>
