--- a/src/html/recentes.html
+++ b/src/html/recentes.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/books.css">
+    <link rel="stylesheet" href="../css/recentes.css">
     <link rel="stylesheet" href="../css/responsive.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="../html/livros.html">Livros</a></li>
+                <li><a href="../html/recentes.html">Livros</a></li>
                 <li><a href="#">Gibis</a></li>
             </ul>
         </nav>
