--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="src/html/livros.html">Livros</a></li>
+                <li><a href="src/html/livros.html">Recentes</a></li>
                 <li><a href="#">Infância</a></li>
             </ul>
         </nav>
@@ -28,7 +28,11 @@
     <main class="container">
         <section class="panel">
             <h2 class="general-title">Boas-Vindas</h2>
-            <p></p>
+            <p>
+                Querido(s) visitante(s) seja muito bem vindo a minha biblioteca pessoal.
+                <br>
+                Neste site teremos duas págins, onde na primeira, 
+            </p>
         </section>
     </main>
     <footer class="footer">
