--- a/src/html/recentes.html
+++ b/src/html/recentes.html
@@ -21,8 +21,8 @@
         <nav>
             <ul class="menu">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="../html/recentes.html">Livros</a></li>
-                <li><a href="#">Gibis</a></li>
+                <li><a href="../html/recentes.html">recentes</a></li>
+                <li><a href="#">Infância</a></li>
             </ul>
         </nav>
     </header>
