--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsive.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -20,7 +22,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="src/html/livros.html">Recentes</a></li>
+                <li><a href="src/html/recentes.html">Recentes</a></li>
                 <li><a href="#">Infância</a></li>
             </ul>
         </nav>
@@ -29,15 +31,20 @@
         <section class="panel">
             <h2 class="general-title">Boas-Vindas</h2>
             <p>
-                Querido(s) visitante(s) seja muito bem vindo a minha biblioteca pessoal.
+                Querido(s) visitante(s) seja(m) muito bem vindo(os) á minha biblioteca pessoal.
+                <br>
                 <br>
                 Eu me chamo Pedro Isidoro tenho 19 anos, e estou fazendo esse site como forma de HD Externo, para poder guardar e sempre rever quais obras eu já consumi.
                 <br>
+                <br>
                 Durante o decorrer desse site você irá poder perceber que sou um pouco eclético aos gêneros literários n os quais leio hahaha.
+                <br>
                 <br>
                 E honestamente, isso se deve a minha curiosidade e vontade de sempre saber, nem que seja so um pouquinho, de algo novo o qual possa me agregar, futuramente, conversas mais profundas com diversos tipos de pessoas.
                 <br>
+                <br>
                 Neste site teremos duas páginas, onde na primeira, nomeada de recentes, estarão minhas leituras atuais desde meus 16 anos até os dias de hoje, onde englobaram livros de diversos gêneros literários.
+                <br>
                 <br>
                 E na segunda, nomeada de infância, estarão meus livros lidos na minha pequenez, onde englobaram gibis, histórias em quadrinhos e livros também.
             </p>
@@ -52,20 +59,18 @@
             <article class="navegation">
                 <nav>
                     <ul class="footer-menu">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="./index.html">Home</a></li>
+                    <li><a href="src/html/recentes.html">Recentes</a></li>
+                    <li><a href="#">Infância</a></li>
                     </ul>
                 </nav>
             </article>
             <article class="contacts">
                 <p></p>
                 <ul class="nets">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="https://www.instagram.com/pedrol.isidoro/" target="_blank"><i class="fab fa-instagram instagram"></i></a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=5511970601261&text=Ol%C3%A1,%20Tudo%20bem?%0AMe%20chamo%20Pedro%20Isidoro." target="_blank"><i class="fab fa-whatsapp whatsapp"></i></a></li>
+                    <li><a href="https://github.com/pedro-isidoro" target="_blank"><i class="fab fa-github github"></i></a></li>
                 </ul>
             </article>
         </section>
