--- a/src/html/recentes.html
+++ b/src/html/recentes.html
@@ -31,7 +31,7 @@
             <h2 class="general-title">Livros</h2>
             
             <article class="genre">
-                <h3 class="genre-title">ficção Científica</h3>
+                <h3 class="genre-title">ficção-Científica</h3>
                 <section class="star-wars">
                     <h4 class="book-name">Star Wars</h4>
                     <div class="books-images">
@@ -43,7 +43,7 @@
             </article>
 
             <article class="genre">
-                <h3 class="genre-title">ficção Fantasia</h3>
+                <h3 class="genre-title">ficção-Fantasia</h3>
                 <section class="harry-potter">
                     <h4 class="book-name">Harry Potter</h4>
                     <div class="books-images">
@@ -83,7 +83,7 @@
             </article>
 
             <article class="genre">
-                <h3 class="genre-title">ficção Fantasia Ficção Aventura</h3>
+                <h3 class="genre-title">ficção-Fantasia E Ficção-Aventura</h3>
                 <section class="percy-jackson">
                     <h4 class="book-name">Percy Jackson e Os Olimpianos</h4>
                     <div class="books-images">
@@ -256,7 +256,7 @@
             </article>
 
             <article class="genre">
-                <h3 class="genre-title">Não Ficção</h3>
+                <h3 class="genre-title">Não-Ficção</h3>
                 <section class="books-images">
                     <div class="book">
                         <img src="../image/books/a-arte-da-guerra.jpg" alt="Imagem de A Arte da Guerra">
