--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -21,7 +21,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="../html/recentes.html">recentes</a></li>
+                <li><a href="../html/recentes.html">Recentes</a></li>
                 <li><a href="#">Infância</a></li>
             </ul>
         </nav>
