--- a/src/html/recentes.html
+++ b/src/html/recentes.html
@@ -334,30 +334,29 @@
         </section>
     </main>
     <footer class="footer">
-        <section class="inside-the-footer">
-            <article class="footer-logo">
-                <a href="#"><i></i></a>
-                <h1 class="footer-logo-title"></h1>
-            </article> 
-            <article class="navegation">
-                <nav>
-                    <ul class="footer-menu">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                </nav>
-            </article>
-            <article class="contacts">
-                <p></p>
+        <sectio class="inside-the-footer">
+            <section class="footer-header">
+                <article class="footer-logo">
+                    <a href="./index.html"><img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
+                    <h1 class="footer-logo-title">Biblioteca</h1>
+                </article> 
+                <article class="navegation">
+                    <nav>
+                        <ul class="footer-menu">
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="src/html/recentes.html">Recentes</a></li>
+                            <li><a href="#">Infância</a></li>
+                        </ul>
+                    </nav>
+                </article>
+            </section>
+            <section class="contacts">
                 <ul class="nets">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="https://www.instagram.com/pedrol.isidoro/" target="_blank"><i class="fab fa-instagram instagram"></i></a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=5511970601261&text=Ol%C3%A1,%20Tudo%20bem?%0AMe%20chamo%20Pedro%20Isidoro." target="_blank"><i class="fab fa-whatsapp whatsapp"></i></a></li>
+                    <li><a href="https://github.com/pedro-isidoro" target="_blank"><i class="fab fa-github github"></i></a></li>
                 </ul>
-            </article>
+            </section>
         </section>
     </footer>
 </body>
