--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <article class="navegation">
                     <nav>
                         <ul class="footer-menu">
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="/index.html">Home</a></li>
                             <li><a href="src/html/recentes.html">Recentes</a></li>
-                            <li><a href="#">Infância</a></li>
+                            <li><a href="src/html/infancia.html">Infância</a></li>
                         </ul>
                     </nav>
                 </article>
