--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/recentes.css">
     <link rel="stylesheet" href="../css/responsive.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -82,15 +84,15 @@
         <sectio class="inside-the-footer">
             <section class="footer-header">
                 <article class="footer-logo">
-                    <a href="./index.html"><img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
+                    <a href="/index.html"><img src="../image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
                     <h1 class="footer-logo-title">Biblioteca</h1>
                 </article> 
                 <article class="navegation">
                     <nav>
                         <ul class="footer-menu">
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="src/html/recentes.html">Recentes</a></li>
-                            <li><a href="#">Infância</a></li>
+                            <li><a href="/index.html">Home</a></li>
+                            <li><a href="../html/recentes.html">Recentes</a></li>
+                            <li><a href="../html/infancia.html">Infância</a></li>
                         </ul>
                     </nav>
                 </article>
