--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="src/html/infancia.html">Infância</a></li>
             </ul>
         </nav>
+        <hr class="header-hr">
     </header>
     <main class="container">
         <section class="panel">
@@ -47,6 +48,7 @@
                 <br>
                 E na segunda, nomeada de infância, estarão meus livros lidos na minha pequenez, onde englobaram gibis, histórias em quadrinhos e livros também.
             </p>
+            <hr class="contaner-hr">
         </section>
     </main>
     <footer class="footer">
