--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -26,6 +26,7 @@
                 <li><a href="../html/recentes.html">Recentes</a></li>
             </ul>
         </nav>
+        <hr class="header-hr">
     </header>
     <main class="container">
         <section class="books">
@@ -77,6 +78,7 @@
                     </div>
                 </section>
             </article>
+            <hr class="contaner-hr">
         </section>
     </main>
     <footer class="footer">
