--- a/src/html/recentes.html
+++ b/src/html/recentes.html
@@ -26,6 +26,7 @@
                 <li><a href="../html/infancia.html">Infância</a></li>
             </ul>
         </nav>
+        <hr class="header-hr">
     </header>
     <main class="container">
         <section class="books">
@@ -332,6 +333,7 @@
                     </div>
                 </section>
             </article> -->
+            <hr class="contaner-hr">
         </section>
     </main>
     <footer class="footer">
