--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -16,10 +16,14 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">
+        <!-- <div class="logo">
             <a href="/index.html"><img src="../image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
             <h1 class="logo-title">Biblioteca</h1>
-        </div>
+        </div> -->
+        <a href="./index.html" class="logo">
+            <img src="../image/logo-image/books-mobile.png" alt="Imagem da logo">
+            <h1 class="logo-title">Biblioteca</h1>
+        </a>
         <nav>
             <ul class="menu">
                 <li><a href="/index.html">Home</a></li>
