--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <a href="./index.html"><img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
+        <a href="./index.html" class="logo">
+            <img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo">
             <h1 class="logo-title">Biblioteca</h1>
-        </div>
+        </a>
         <nav>
             <ul class="menu">
                 <li><a href="src/html/recentes.html">Recentes</a></li>
@@ -61,7 +61,7 @@
                 <article class="navegation">
                     <nav>
                         <ul class="footer-menu">
-                            <li><a href="/index.html">Home</a></li>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="src/html/recentes.html">Recentes</a></li>
                             <li><a href="src/html/infancia.html">Infância</a></li>
                         </ul>
