--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -21,7 +21,7 @@
             <h1 class="logo-title">Biblioteca</h1>
         </div> -->
         <a href="./index.html" class="logo">
-            <img src="../image/logo-image/books-mobile.png" alt="Imagem da logo">
+            <img src="../image/logo-image/books.png" alt="Imagem da logo">
             <h1 class="logo-title">Biblioteca</h1>
         </a>
         <nav>
