--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <footer class="footer">
         <sectio class="inside-the-footer">
             <section class="footer-header">
-                <article class="footer-logo">
-                    <a href="./index.html"><img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
+                <a href="./index.html" class="footer-logo">
+                     <img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo">
                     <h1 class="footer-logo-title">Biblioteca</h1>
-                </article> 
+                </a> 
                 <article class="navegation">
                     <nav>
                         <ul class="footer-menu">
