--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="./index.html" class="logo">
+        <a href="/index.html" class="logo">
             <img src="src/image/logo-image/books.png" alt="Imagem da logo">
             <h1 class="logo-title">Biblioteca</h1>
         </a>
@@ -54,7 +54,7 @@
     <footer class="footer">
         <sectio class="inside-the-footer">
             <section class="footer-header">
-                <a href="./index.html" class="footer-logo">
+                <a href="/index.html" class="footer-logo">
                      <img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo">
                     <h1 class="footer-logo-title">Biblioteca</h1>
                 </a> 
