--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -20,7 +20,7 @@
             <a href="/index.html"><img src="../image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
             <h1 class="logo-title">Biblioteca</h1>
         </div> -->
-        <a href="./index.html" class="logo">
+        <a href="/index.html" class="logo">
             <img src="../image/logo-image/books.png" alt="Imagem da logo">
             <h1 class="logo-title">Biblioteca</h1>
         </a>
@@ -89,8 +89,10 @@
         <sectio class="inside-the-footer">
             <section class="footer-header">
                 <article class="footer-logo">
-                    <a href="/index.html"><img src="../image/logo-image/books-mobile.png" alt="Imagem da logo"></a>
-                    <h1 class="footer-logo-title">Biblioteca</h1>
+                    <a href="/index.html" class="footer-logo">
+                        <img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo">
+                       <h1 class="footer-logo-title">Biblioteca</h1>
+                   </a>
                 </article> 
                 <article class="navegation">
                     <nav>
