--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -90,7 +90,7 @@
             <section class="footer-header">
                 <article class="footer-logo">
                     <a href="/index.html" class="footer-logo">
-                        <img src="src/image/logo-image/books-mobile.png" alt="Imagem da logo">
+                        <img src="../image/logo-image/books-mobile.png" alt="Imagem da logo">
                        <h1 class="footer-logo-title">Biblioteca</h1>
                    </a>
                 </article> 
