--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br>
                 E na segunda, nomeada de infância, estarão meus livros lidos na minha pequenez, onde englobaram gibis, histórias em quadrinhos e livros também.
             </p>
-            <hr class="contaner-hr">
+            <hr class="container-hr">
         </section>
     </main>
     <footer class="footer">
