--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -82,7 +82,7 @@
                     </div>
                 </section>
             </article>
-            <hr class="contaner-hr">
+            <hr class="container-hr">
         </section>
     </main>
     <footer class="footer">
