--- a/src/html/recentes.html
+++ b/src/html/recentes.html
@@ -337,7 +337,7 @@
                     </div>
                 </section>
             </article> -->
-            <hr class="contaner-hr">
+            <hr class="container-hr">
         </section>
     </main>
     <footer class="footer">
