--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -78,6 +78,18 @@
                     </div>
                 </section>
             </article>
+            <hr>
+            <h2 class="general-title">Gibis</h2>
+            <article class="genre">
+                <h3 class="genre-title">Turma da Mônica Jovem</h3>
+                <section class="diario-de-um-banana">
+                    <div class="books-images">
+                        <!-- <div class="book">
+                            <img src="../image/books/" alt="Imagem de Diário de um Banana 10">
+                        </div> -->
+                    </div>
+                </section>
+            </article>
             <hr class="container-hr">
         </section>
     </main>
