--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -81,12 +81,13 @@
             <hr>
             <h2 class="general-title">Gibis</h2>
             <article class="genre">
-                <h3 class="genre-title">Turma da Mônica Jovem</h3>
+                <h3 class="genre-title">Humor</h3>
                 <section class="diario-de-um-banana">
+                    <h4 class="book-name">Turma da Mônica Jovem</h4>
                     <div class="books-images">
-                        <!-- <div class="book">
-                            <img src="../image/books/" alt="Imagem de Diário de um Banana 10">
-                        </div> -->
+                        <div class="book">
+                            <img src="../image/books/turma-da-monica-jovem-1.jpg" alt="Imagem de Turma da Mônica Volume 1">
+                        </div>
                     </div>
                 </section>
             </article>
