Arrumando o link home.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <article class="navegation">
                     <nav>
                         <ul class="footer-menu">
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="src/html/recentes.html">Recentes</a></li>
                             <li><a href="src/html/infancia.html">Infância</a></li>
                         </ul>
