--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -82,12 +82,28 @@
             <h2 class="general-title">Gibis</h2>
             <article class="genre">
                 <h3 class="genre-title">Humor</h3>
-                <section class="diario-de-um-banana">
+                <section class="Turma da Mônica Jovem">
                     <h4 class="book-name">Turma da Mônica Jovem</h4>
                     <div class="books-images">
                         <div class="book">
-                            <img src="../image/books/turma-da-monica-jovem-1.jpg" alt="Imagem de Turma da Mônica Volume 1">
+                            <img src="../image/books/gibis/turma-da-monica-jovem-1.jpg" alt="Imagem de Turma da Mônica Volume 1">
                         </div>
+                    </div>
+                </section>
+                <hr>
+
+                <section class="disney">
+                    <h4 class="book-name">Disney</h4>
+                    <div class="book">
+                        <img src="../image/books/gibis/mega-disney-9.jpg" alt="Imagem de Mega Disney N°9">
+                    </div>
+
+                    <div class="book">
+                        <img src="" alt="Imagem de">
+                    </div>
+
+                    <div class="book">
+                        <img src="" alt="Imagem de">
                     </div>
                 </section>
             </article>
