Atualizando os livros da infancia.

--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -94,16 +94,30 @@
 
                 <section class="disney">
                     <h4 class="book-name">Disney</h4>
-                    <div class="book">
-                        <img src="../image/books/gibis/mega-disney-9.jpg" alt="Imagem de Mega Disney N°9">
-                    </div>
+                    <div class="books-images">
+                        <div class="book">
+                            <img src="../image/books/gibis/mega-disney-9.jpg" alt="Imagem de Mega Disney N° 9">
+                        </div>
+    
+                        <div class="book">
+                            <img src="../image/books/gibis/mega-disney-10.jpg" alt="Imagem de Mega Disney N° 10">
+                        </div>
+    
+                        <div class="book">
+                            <img src="" alt="Imagem de">
+                        </div>
 
-                    <div class="book">
-                        <img src="" alt="Imagem de">
-                    </div>
+                        <div class="book">
+                            <img src="" alt="Imagem de">
+                        </div>
 
-                    <div class="book">
-                        <img src="" alt="Imagem de">
+                        <div class="book">
+                            <img src="" alt="Imagem de">
+                        </div>
+
+                        <div class="book">
+                            <img src="" alt="Imagem de">
+                        </div>
                     </div>
                 </section>
             </article>
