--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -104,19 +104,35 @@
                         </div>
     
                         <div class="book">
-                            <img src="" alt="Imagem de">
+                            <img src="../image/books/gibis/disney-jumbo-11.jpeg" alt="Imagem de Disney Jumbo N° 11">
                         </div>
 
                         <div class="book">
-                            <img src="" alt="Imagem de">
+                            <img src="../image/books/gibis/disney-big-31.jpg" alt="Imagem de Disney Big N° 31">
                         </div>
 
                         <div class="book">
-                            <img src="" alt="Imagem de">
+                            <img src="../image/books/gibis/disney-big-33.jpeg" alt="Imagem de Disney Big N° 33">
                         </div>
 
                         <div class="book">
-                            <img src="" alt="Imagem de">
+                            <img src="../image/books/gibis/disney-sir-lock-holmes.jpg" alt="Imagem de Disney Sir Lock Holmes">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/disney-rock.jpeg" alt="Imagem de Disney Rock">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/disney-superpateta.jpg" alt="Imagem de Disney Superpateta">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/disney-artistas-e-modelos.jpg" alt="Imagem de Disney Artistas e Modelos">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
                         </div>
                     </div>
                 </section>
