--- a/src/html/infancia.html
+++ b/src/html/infancia.html
@@ -131,9 +131,32 @@
                             <img src="../image/books/gibis/disney-artistas-e-modelos.jpg" alt="Imagem de Disney Artistas e Modelos">
                         </div>
 
+                        <!-- <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
+                        </div>
+
                         <div class="book">
                             <img src="../image/books/gibis/" alt="Imagem de">
                         </div>
+                        
+                        <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
+                        </div>
+                        <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
+                        </div>
+
+                        <div class="book">
+                            <img src="../image/books/gibis/" alt="Imagem de">
+                        </div>-->
                     </div>
                 </section>
             </article>
